--- a/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
@@ -123,9 +123,9 @@
             } *@
             @foreach (var item in Model)
             {
-                <div class="col-lg-4 col-md-6">
-                    <div class="card shadow-sm h-90">
-                        <div class="card-body">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body card-body-custom">
                             <a id="propertyDetails" href="/Assests/AssetDetails/@item?.AssetId" class="text-decoration-none text-dark">
                                 <div class="d-flex align-items-center mb-3">
                                     @{
@@ -160,25 +160,25 @@
                             }
                         </div>
                         <div class="card-footer bg-transparent border-top-0">
-                            <div class="d-flex justify-content-between">
-                                <button type="button" class="btn btn-info btn-xs text-nowrap" onclick="openUnitsModal(@item?.AssetId)">
+                            <div class="d-flex flex-wrap justify-content-between">
+                                <button type="button" class="btn btn-info btn-sm mb-2 me-2" onclick="openUnitsModal(@item?.AssetId)">
                                     <i class="fa fa-info-circle"></i> Unit Detail
                                 </button>
-                                <button type="button" class="btn btn-warning btn-xs text-nowrap" onclick="assetLateFee(@item.AssetId)">
+                                <button type="button" class="btn btn-warning btn-sm mb-2 me-2" onclick="assetLateFee(@item.AssetId)">
                                     <i class="fa fa-pencil"></i> Late Fee
                                 </button>
-                                <button type="button" class="btn btn-success btn-xs text-nowrap" onclick="editAsset(@item.AssetId)">
+                                <button type="button" class="btn btn-success btn-sm mb-2 me-2" onclick="editAsset(@item.AssetId)">
                                     <i class="fa fa-pencil"></i> Edit
                                 </button>
-                                <button type="button" class="btn btn-danger btn-xs text-nowrap" onclick="deleteAsset(@item.AssetId)">
+                                <button type="button" class="btn btn-danger btn-sm mb-2 me-2" onclick="deleteAsset(@item.AssetId)">
                                     <i class="fa fa-trash"></i> Delete
                                 </button>
                             </div>
                         </div>
-
                     </div>
-                </div> 
+                </div>
             }
+
 
         </div>
     </div>
